Fix sortable alignment

--- a/src/scss/tablestakes.scss
+++ b/src/scss/tablestakes.scss
@@ -262,7 +262,6 @@ table.tablestakes {
       position: relative;
       padding-right: 20px;
       cursor: pointer;
-      text-align: left;
 
       &:before, &:after {
         position: absolute;
